tests/negative/neg_pr113_unknown_discriminant_name.safe
package Neg_PR113_Unknown_Discriminant_Name
   type Packet (Kind : Character = 'A', Count : Integer = 0) is
      record
         Value : Integer;

   P : Packet (Mode = 'A', Count = 1) = (Value = 1);

